Align center fix

--- a/admin/templates/easy4/css/tinymce.css
+++ b/admin/templates/easy4/css/tinymce.css
@@ -27,6 +27,11 @@ pre {
 	float: right;
 }
 
+.nb-align-center {
+	display:block;
+	margin:0 auto 1em;
+}
+
 td, th {
 	font-size: 14px !important;
 }
